--- a/BabyDevBot/BabyDevBot.csproj
+++ b/BabyDevBot/BabyDevBot.csproj
@@ -1,8 +1,13 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <OutputType>Exe</OutputType>
     <TargetFramework>netcoreapp2.2</TargetFramework>
+  </PropertyGroup>
+
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|AnyCPU'">
+    <TreatWarningsAsErrors>true</TreatWarningsAsErrors>
+    <WarningsAsErrors />
   </PropertyGroup>
 
   <ItemGroup>
@@ -10,10 +15,9 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Folder Include="Core\Data\" />
-    <Folder Include="Resources\Database\" />
-    <Folder Include="Resources\Datatypes\" />
-    <Folder Include="Resources\Extensions\" />
+    <Reference Include="System">
+      <HintPath>System</HintPath>
+    </Reference>
   </ItemGroup>
 
 </Project>
